--- a/blog/te-houtaewa-template.css
+++ b/blog/te-houtaewa-template.css
@@ -1,10 +1,20 @@
 body {
-  background-image: url(https://krsinich.files.wordpress.com/2020/07/11024620_1542378022695640_1448782524197824145_n.jpg?w=541&h=&zoom=2);
+  background-image: url(https://cdn.historycollection.com/wp-content/uploads/2018/05/A_human_sacrifice_in_._._Otaheite_in_Cooks_Voyages_Wellcome_L0013102-1024x351.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   text-align: center;
   font-family: 'Oswald', sans-serif;
+}
+
+div.transbox2 {
+  margin: 60px;
+  border: 5px solid rgb(195, 84, 84);
+  opacity: 0.95;
+  background-image: url(https://krsinich.files.wordpress.com/2020/07/11115755_1554247428175366_1618518049149356207_n.jpg?w=562&h=&zoom=2);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 div.background {
@@ -30,6 +40,11 @@ div {
 
 .para-text {
   color: white;
+}
+
+.para-text2 {
+  color: rgb(71, 39, 39);
+  font-size: 10px;
 }
 
 #special-font {
