putting transparent boxes around the technical blog

--- a/blog/html-css.css
+++ b/blog/html-css.css
@@ -7,6 +7,16 @@ body {
   font-family: 'Oswald', sans-serif;
 }
 
+div.transbox2 {
+  margin: 60px;
+  border: 5px solid rgb(195, 84, 84);
+  opacity: 0.95;
+  background-image: url(https://krsinich.files.wordpress.com/2020/07/11115755_1554247428175366_1618518049149356207_n.jpg?w=562&h=&zoom=2);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
 div.background {
   background: padding-box repeat;
 }
