add learning plan and identity, values and strengths

--- a/sprint2/blog.css
+++ b/sprint2/blog.css
@@ -71,16 +71,13 @@ p {
   font-size: 40px;
   color: rgb(30, 65, 117);
 }
-div {
-}
 
 .para-text {
-  color: rgb(112, 139, 161);
+  color: rgb(37, 62, 82);
   font-size: 50px;
 }
 
-#special-font {
-  font-family: 'Courier New';
-  font-size: 30px;
-  color: darkred;
+.para-text2 {
+  color: rgb(120, 164, 201);
+  font-size: 50px;
 }
