upload rearranged folders and updated blog pages

--- a/main.css
+++ b/main.css
@@ -1,30 +1,27 @@
-h1 {
-  font-family: 'Courier New';
-  font-size: 60px;
-  color: rgb(140, 8, 19);
-  text-align: center;
-  margin: 20px;
-}
-h2 {
-  font-family: 'Courier New';
-  font-size: 40px;
-  color: darkblue;
-  margin: 20px;
-}
-p {
-  font-size: 25px;
-  color: rgb(7, 22, 44);
-  margin: 20px;
-}
 body {
-  background-image: url(https://krsinich.files.wordpress.com/2021/02/145017792_481539376169524_7076541723589729980_n-1.jpg);
+  background-image: url(https://krsinich.files.wordpress.com/2023/05/img_4804.jpg?w=2048);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  text-align: left;
+  text-align: center;
   font-family: 'Oswald', sans-serif;
 }
-div.transbox {
+
+div.background {
+  background: padding-box repeat;
+}
+
+div.transbox1 {
+  margin: 60px;
+  /* border: 5px solid rgb(195, 84, 84); */
+  opacity: 0.4;
+  background-image: url(https://media1.tenor.com/images/c30d6490196742a193c2ed49a45e364b/tenor.gif?itemid=12740211);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+div.transbox2 {
   margin: 60px;
   border: 5px solid rgb(195, 84, 84);
   opacity: 0.95;
@@ -34,16 +31,59 @@ div.transbox {
   background-size: cover;
 }
 
-div.background {
-  background: padding-box repeat;
+div.transbox3 {
+  margin: 60px;
+  background-color: #ffffff;
+  /* border: 5px solid rgb(195, 84, 84); */
+  opacity: 0.4;
+  text-align: left;
+  background: url('https://media3.giphy.com/media/LWBkgGLVvDBJK/200.gif')
+    repeat-x scroll 0 0 transparent;
 }
 
-.bounding-box {
-  background-image: url(...);
-  background-size: contain;
-  position: absolute;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 50%;
-  width: 50%;
+div.transbox p {
+  margin: 10%;
+  font-weight: bold;
+  color: #000000;
+}
+
+h1 {
+  font-family: 'Courier New';
+  font-size: 80px;
+  color: rgb(158, 45, 54);
+}
+h2 {
+  font-family: 'Courier New';
+  font-size: 50px;
+  color: rgb(30, 65, 117);
+}
+p {
+  font-size: 30px;
+  color: rgb(30, 65, 117);
+  text-align: left;
+}
+
+.para-text {
+  color: white;
+  text-align: center;
+}
+
+.special-font {
+  font-family: 'Courier New';
+  font-size: 30px;
+  color: darkred;
+  font-weight: bold;
+  text-align: center;
+}
+
+.para-text2 {
+  color: rgb(120, 164, 201);
+  font-size: 50px;
+}
+
+.list {
+  font-size: 40px;
+  color: rgb(30, 65, 117);
+  font-family: 'Oswald', sans-serif;
+  text-align: left;
 }
